improve syntax highlighting, fix horizontal scroll on some pages on mobile, fix left border on tag list

--- a/src/css/article.scss
+++ b/src/css/article.scss
@@ -471,7 +471,7 @@ article {
       }
       
       ul + ul {
-        border-left: 4px solid $color-background;
+        //border-left: 4px solid $color-background;
       }
 
       li {
