--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -27,6 +27,8 @@ html {
 }
 
 body {
+  overflow-x: hidden;
+  
   display: flex;
   flex-direction: column;
 
